I#147 - CamelVeeFolder: Propagate searches into subfolders

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/issues/147